feat: Adicionando o link para o whatsapp.

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         <ul>
           <li><a href="#section-history">Nossa História</a></li>
           <li><a href="#section-project">Projetos</a></li>
-          <li><a href="#">Como você pode nos ajudar</a></li>
+          <li><a href="#section-contact">Como você pode nos ajudar</a></li>
         </ul>
         <ul>
           <li><a href="#section-community">Nossa comunidade</a></li>
           <li>
             <button class="nav-button">
-              <a href="#"><i class="fa-brands fa-whatsapp"></i>Entrar em contato</a>
+              <a href="https://api.whatsapp.com/send?phone=554198640089&text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20a%20Líria"><i class="fa-brands fa-whatsapp"></i>Entrar em contato</a>
             </button>
           </li>
         </ul>
@@ -67,13 +67,13 @@
         <ul>
           <li><a href="#section-history">Nossa História</a></li>
           <li><a href="#section-project">Projetos</a></li>
-          <li>Como você pode nos ajudar</li>
+          <li><a href="#section-contact">Como você pode nos ajudar</a></li>
         </ul>
         <ul>
           <li><a href="#section-community">Nossa comunidade</a></li>
           <li>
             <button class="nav-button">
-              <a href="#"><i class="fa-brands fa-whatsapp"></i>Entrar em contato</a>
+              <a href="https://api.whatsapp.com/send?phone=554198640089&text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20a%20Líria"><i class="fa-brands fa-whatsapp"></i>Entrar em contato</a>
             </button>
           </li>
         </ul>
@@ -109,7 +109,7 @@
         </div>
         <div class="div-info-tree">
           <button class="section-one-button button-one">
-            <a href="#"><i class="fa-brands fa-whatsapp"></i>Entrar em contato</a>
+            <a href="https://api.whatsapp.com/send?phone=554198640089&text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20a%20Líria"><i class="fa-brands fa-whatsapp"></i>Entrar em contato</a>
           </button>
           <button class="section-one-button button-two">
             Nossa comunidade
